--- a/QR-Code/package.json
+++ b/QR-Code/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^24.2.0",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.2.1",
     "gh-pages": "^6.3.0",
     "jsdom": "^26.1.0",
