--- a/QR-Code/package.json
+++ b/QR-Code/package.json
@@ -16,7 +16,8 @@
     "html2canvas": "^1.4.1",
     "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.7.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.4",
